[gd_scene load_steps=6 format=3 uid="uid://c75mlnjq5y7ft"]

[ext_resource type="PackedScene" uid="uid://176g3cp8n76a" path="res://scenes/block_window/block_environment/g_block_schema/g_block/g_block.tscn" id="1_ub27w"]
[ext_resource type="Script" path="res://scenes/block_window/block_environment/g_block_schema/block_action/g_block_action.gd" id="2_4uot8"]
[ext_resource type="PackedScene" uid="uid://d1in5wx8kx4ek" path="res://scenes/block_window/Arrows/arrows.tscn" id="3_2h44i"]
[ext_resource type="PackedScene" uid="uid://cq3i7td46je11" path="res://scenes/block_window/block_environment/g_block_schema/g_block/gui_point_links/g_end_point.tscn" id="3_cqbes"]
[ext_resource type="PackedScene" uid="uid://dvd6ysg6qyrj2" path="res://scenes/block_window/block_environment/g_block_schema/g_block/gui_point_links/g_begin_point.tscn" id="4_dknfx"]

[node name="GBlockAction" instance=ExtResource("1_ub27w")]
script = ExtResource("2_4uot8")

[node name="Type" parent="Control/MarginContainer/Content" index="1"]
text = "Блок действия"

[node name="DirectionContainer" parent="Control/MarginContainer/Content" index="2" instance=ExtResource("3_2h44i")]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="Control/MarginContainer/Content" index="3"]
layout_mode = 2
text = "Прыжок"

[node name="GEndPoint" parent="EndPoints" index="0" instance=ExtResource("3_cqbes")]
position = Vector2(0, -66)

[node name="GBeginPoint" parent="BeginPoints" index="0" instance=ExtResource("4_dknfx")]
position = Vector2(0, 67)
